add a width indicator in components module

--- a/public/app/views/components.handlebars
+++ b/public/app/views/components.handlebars
@@ -180,6 +180,7 @@
 					></iframe>
 
 					<div class="components__iframe-wrapper-actions">
+						<span class="components__iframe-wrapper-action" iframe-width-indicator></span>
 						{{#if ../config.components.states}}
 							{{#each ../config.components.states}}
 								<a class="components__iframe-wrapper-action"
